# kobuki

./: .gitignore  .project  .travis.yml  CHANGELOG.rst  README.markdown  acceleration__limiter_8hpp.html  acceleration__limiter_8hpp__dep__incl.map  acceleration__limiter_8hpp__dep__incl.md5  acceleration__limiter_8hpp__incl.map  acceleration__limiter_8hpp__incl.md5  acceleration__limiter_8hpp_source.html  annotated.html  battery_8cpp.html  battery_8cpp__incl.map  battery_8cpp__incl.md5  battery_8cpp_source.html  battery_8hpp.html  battery_8hpp__dep__incl.map  battery_8hpp__dep__incl.md5  battery_8hpp__incl.map  battery_8hpp__incl.md5  battery_8hpp_source.html  classKobukiManager-members.html  classKobukiManager.html  classRb2Vw-members.html  classRb2Vw.html  classes.html  classkobuki_1_1AccelerationLimiter-members.html  classkobuki_1_1AccelerationLimiter.html  classkobuki_1_1Battery-members.html  classkobuki_1_1Battery.html  classkobuki_1_1Cliff-members.html  classkobuki_1_1Cliff.html  classkobuki_1_1Cliff__inherit__graph.map  classkobuki_1_1Cliff__inherit__graph.md5  classkobuki_1_1Command-members.html  classkobuki_1_1Command.html  classkobuki_1_1Command__inherit__graph.map  classkobuki_1_1Command__inherit__graph.md5  classkobuki_1_1ControllerInfo-members.html  (+564 more)
kobuki/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_apps/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kobuki_apps/android_make_a_map/: android_make_a_map.app  android_make_a_map.launch  android_teleop.interface
kobuki_apps/android_map_nav/: android_map_nav.app  android_map_nav.launch
kobuki_apps/android_teleop/: android_teleop.app  android_teleop.interface  android_teleop.launch
kobuki_apps/chirp/: chirp.app  chirp.launch  chirp.py
kobuki_apps/kobuki_follower/: ROS_NOBUILD  follower.app  follower.launch
kobuki_apps/launch/: minimal_apps_caps.launch
kobuki_apps/rapps/: kobuki.rapps
kobuki_arm/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  package_DISABLED.xml
kobuki_arm/scripts/: arm_controller.py  joint_command_publisher  test_example.sh
kobuki_auto_docking/: .cproject  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kobuki_auto_docking/action/: AutoDocking.action
kobuki_auto_docking/launch/: activate.launch  auto_dock_with_safe_keyop.launch  compact.launch  minimal.launch  standalone.launch
kobuki_auto_docking/param/: auto_docking.yaml  cmd_vel_mux.yaml
kobuki_auto_docking/plugins/: nodelet_plugins.xml
kobuki_auto_docking/scripts/: DockDriveActionClient.py  DockDriveControl.py  getDockIR.py
kobuki_auto_docking/src/: auto_docking.cpp  auto_docking_ros.cpp  dock_drive.cpp  nodelet.cpp
kobuki_bumper2pc/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kobuki_bumper2pc/launch/: standalone.launch
kobuki_bumper2pc/plugins/: nodelet_plugins.xml
kobuki_bumper2pc/src/: kobuki_bumper2pc.cpp
kobuki_capabilities/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_capabilities/interfaces/: KobukiBringup.yaml  KobukiBumper.yaml  KobukiCliffDetection.yaml  KobukiLED.yaml  KobukiLED1.yaml  KobukiLED2.yaml  KobukiWheelDropDetection.yaml  LED.yaml
kobuki_capabilities/launch/: app_manager_with_capabilities.launch  capability_server.launch  kobuki_capability_server.launch
kobuki_capabilities/param/: defaults_kobuki_capabilities.yaml
kobuki_capabilities/providers/: kobuki_bringup.yaml  kobuki_bumper.yaml  kobuki_cliff_detection.yaml  kobuki_differential_mobile_base.yaml  kobuki_differential_mobile_base_w_tf.yaml  kobuki_led.yaml  kobuki_led1.yaml  kobuki_led2.yaml  kobuki_wheel_drop_detection.yaml
kobuki_capabilities/scripts/: idle_node.py
kobuki_controller_tutorial/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kobuki_controller_tutorial/launch/: bump_blink_app.launch  standalone.launch
kobuki_controller_tutorial/plugins/: nodelet_plugins.xml
kobuki_controller_tutorial/src/: nodelet.cpp
kobuki_description/: .cproject  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  package_DISABLED.xml
kobuki_description/launch/: view_model.launch
kobuki_description/meshes/: base.dae  kobuki.stl  wheel.dae
kobuki_description/robots/: kobuki.urdf.xacro  kobuki_kinect.urdf.xacro  kobuki_xtion.urdf.xacro  kobukibot_kinect.urdf.xacro  kobukibot_xtion.urdf.xacro
kobuki_description/urdf/: gazebo.urdf.xacro  kinect.urdf.xacro  kobuki.urdf.xacro  kobuki_body.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro  turtlebot2_kinect.urdf.xacro  turtlebot2_stack.urdf.xacro  turtlebot2_xtion.xacro  turtlebot_hardware.urdf.xacro  xtion_pro.urdf.xacro
kobuki_driver/: .cproject  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  LICENSE  Makefile  catkin_whitelist  firmware.changelog  firmware_changelog.md  mainpage.dox  manifest.xml  package.xml
kobuki_driver/doxygen/: mainpage.dox
kobuki_driver/graveyard/: st_gyro.hpp
kobuki_driver/src/: CMakeLists.txt
kobuki_factory_test/: .cproject  .project  CMakeLists.txt  kobuki_factory_test.files  mainpage.dox  manifest.xml
kobuki_factory_test/src/: main.cpp  (+2 more)
kobuki_ftdi/: .cproject  .project  57-kobuki.rules  CHANGELOG.rst  CMakeLists.txt  Makefile  manifest.xml  package.xml  readme.txt
kobuki_keyop/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
kobuki_mainboard/: .cproject  .project  CMakeLists.txt  manifest.xml
kobuki_node/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  LICENSE  calibrate.launch  kobuki_node  manifest.xml  package.xml
kobuki_random_walker/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
kobuki_rapps/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_safety_controller/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kobuki_shooter/: .cproject  .project  CMakeLists.txt  package.xml
(+1722 files in other folders)
