<package>
  <name>kobuki</name>
  <version>0.7.0</version>
  <description>
    Software for Kobuki, Yujin Robot's mobile research base.
  </description>
  <author>Daniel Stonier</author>
  <author>Younghun Ju</author>
  <author>Jorge Santos Simon</author>
  <author>Marcus Liebhardt</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kobuki_auto_docking</run_depend>
  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_controller_tutorial</run_depend>
  <run_depend>kobuki_description</run_depend> 
  <run_depend>kobuki_keyop</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>kobuki_random_walker</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>kobuki_testsuite</run_depend>
  <run_depend>kobuki_rapps</run_depend>
  <run_depend>kobuki_capabilities</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
