<?xml version="1.0"?>
<package>
  <name>kobuki_apps</name>
  <version>0.1.0</version>
  <description>Robot apps for Kobuki</description>
  
  <maintainer email="marcus@todo.todo">marcus</maintainer>
  <author email="marcus@todo.todo">marcus</author>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/kobuki_apps</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>kobuki_capabilities</run_depend>
  <run_depend>rocon_app_manager</run_depend>
</package>