<package>
  <name>kobuki_arm</name>
  <version>0.3.8</version>
  <description>
    Experimental code for controlling an arm on top of Turtlebot (DO NOT USE)   
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/kobuki_arm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 
    Bring these back in when we officially build 
    Otherwise we can't make the deb. Reintroduce 
    stack dependancy 'control' for 'control_msgs' 
    if we need it.

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  
  <build_depend>wxpython</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>dynamixel_controllers</build_depend>
  
  <run_depend>wxpython</build_depend>
   -->
</package>
