<?xml version="1.0"?>
<package>
  <name>kobuki_capabilities</name>
  <version>0.1.0</version>
  <description>Kobuki's capabilities</description>
  
  <maintainer email="marcus@todo.todo">marcus</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/kobuki_capabilities</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>capabilities</run_depend>
  <run_depend>std_capabilities</run_depend>

  <export>
    <capability_provider>
      providers/kobuki_differential_mobile_base.yaml
    </capability_provider>
    <capability_provider>
      providers/kobuki_differential_mobile_base_w_tf.yaml
    </capability_provider>
  </export>
</package>