<?xml version="1.0"?>
<package format="2">
  <name>kobuki_description</name>
  <version>0.7.6</version>
  <description>
      Description of the Kobuki model.

      Provides the model description of Kobuki for simulation and visualisation. The files in this
      package are parsed and used by a variety of other components. Most users will not interact directly
      with this package.
  </description>
  <author>Daniel Stonier</author>
  <author>Marcus Liebhardt</author>
  <author>Younghun Ju</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_description</url>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <!-- <exec_depend>xacro</exec_depend> -->
  <exec_depend>urdf</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
