<package>
  <name>kobuki_driver</name>
  <version>0.3.8</version>
  <description>
    C++ driver library for Kobuki:
    Pure C++ driver library for Kobuki. This is for those who do not wish to use ROS on their systems.
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="younghoon.ju@yujinrobot.com">Younghun Ju</author>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/kobuki_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_mobile_robot</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_devices</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecl_command_line</build_depend>

  <run_depend>ecl_mobile_robot</run_depend>
  <run_depend>ecl_converters</run_depend>
  <run_depend>ecl_devices</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_sigslots</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecl_command_line</run_depend>
</package>
